--- a/Intro IT/ASM1/Assignment 1.html
+++ b/Intro IT/ASM1/Assignment 1.html
@@ -8,7 +8,7 @@
 
 <!-- First Grid: MY PROFILE - PERSONAL INFORMATION -->
 <div class="w3-row">
-  <div class="w3-half w3-black w3-container w3-center" style="height:950px">
+  <div class="w3-half w3-black w3-container w3-center" style="min-height:1100px">
     <div class="w3-padding-64">
       <h1>MY PROFILE</h1>
     </div>
@@ -19,12 +19,13 @@
       <a href="#Ideal Job" class="w3-button w3-black w3-block w3-hover-indigo w3-padding-16">Ideal Job</a>
       <a href="#Personal Profile" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Personal Profile</a>
       <a href="#Project Ideas" class="w3-button w3-black w3-block w3-hover-grey w3-padding-16">Project Ideas</a>
+      <a href="#Reference" class="w3-button w3-black w3-block w3-hover-red w3-padding-16">Reference</a>
     </div>
   </div>
-  <div class="w3-half w3-blue-grey w3-container" style="height:950px" id="Personal Information">
+  <div class="w3-half w3-blue-grey w3-container" style="height:1100px" id="Personal Information">
     <div class="w3-padding-64 w3-center">
       <h1>PERSONAL INFORMATION</h1>
-      <img src="37130343_680310712313243_6156529151424593920_n.jpg" class="w3-margin w3-circle" alt="Person" style="width:25%">
+      <img src="37130343_680310712313243_6156529151424593920_n.jpg" class="w3-margin w3-circle" alt="Person" style="width:40%">
       <div class="w3-left-align w3-padding-large">
           <p><strong>Full name:</strong> LA TRAN HAI DANG</p>
           <p><strong>Date of birth:</strong> 08/06/2000</p>
@@ -47,11 +48,12 @@
 
 <!-- Second Grid: INTEREST IN IT - IDEAL JOB -->
 <div class="w3-row">
-  <div class="w3-half w3-light-grey w3-center w3-container" style="min-height:1550px" id="Interest in IT">
+  <div class="w3-half w3-white w3-center w3-container" style="height:1500px" id="Interest in IT">
     <div class="w3-padding-64 w3-center w3-container">
       <h2>INTEREST IN IT</h2>
-      <div class="w3-padding-50 w3-justify w3-container">
+        <img src="technology-blue-circuit-board_1187x528.jpg" class="w3-left w3-square" alt="IT picture" style="width:100%">
         <div class="w3-padding-50 w3-justify w3-container">
+        <div class="w3-padding-50 w3-justify">
         <br>
         <br>
           <br>
@@ -66,7 +68,7 @@
         </div>
       </div>
   </div>
-  <div class="w3-half w3-indigo w3-container" style="min-height:1550px" id="Ideal Job">
+  <div class="w3-half w3-indigo w3-container" style="min-height:1500px" id="Ideal Job">
     <div class="w3-padding-64 w3-center">
       <h2>IDEAL JOB</h2>
       <img src="Screen Shot 2020-07-19 at 19.53.39.png" class="w3-left w3-square" alt="Ideal Job" style="width:49.5%">
@@ -96,7 +98,7 @@
 
 <!-- Third Grid: PERSONAL PROFILE -->
 <div class="w3-row" id="Personal Profile">
-  <div class="w3-full w3-dark-grey w3-container w3-center" style="height:1200px">
+  <div class="w3-full w3-dark-grey w3-container w3-center" style="min-height:1200px">
     <div class="w3-padding-64">
       <h1>PERSONAL PROFILE</h1>
       <br>
@@ -128,19 +130,68 @@ I often tend to care about the thoughts and receive the happiness when serving o
 
 <!-- Forth Grid: Project Ideas -->
 <div class="w3-row" id="Project Ideas">
-  <div class="w3-full w3-grey w3-container w3-center" style="height:700px">
-    <div class="w3-padding-64">
-      <h1>PROJECT IDEAS</h1>
+  <div class="w3-full w3-grey w3-container w3-center" style="min-height:2200px">
+    <div class="w3-padding-50">
+      <br>
+        <br>
+            <h1>PROJECT IDEAS</h1>
     </div>
-    <div class="w3-padding-64">
-      <p>..for a cup of coffee, or whatever.</p>
-      <p>Chicago, US</p>
-      <p>+00 1515151515</p>
-      <p>test@test.com</p>
-    </div>
+      <div class="w3-container">
+        <div class="w3-container">
+          <div class="w3-container">
+            <div class="w3-justify w3-container">
+            <h3><u><b>Overview:</b></u></h3>
+            <br>
+            <p>The project is called “ Health for Life ”, which creates a mobile platform application to monitor the health situation for patients who have high blood pressure, heart disease, and diabetes. The clients need to make the personal medical profile and update it in the routine. This app will statistic and contribute what is the solution of each specific disease. Besides, patients can easily connect with doctors if they want or in an emergency. This project uses Java as the primary programming language to code “Health for Life”. This will be a useful project if successful to improve the smart health system.</p>
+            <br>
+            <h3><u><b>Motivation:</b></u></h3>
+            <br>
+            <p>At the Corona Virus situation, the healthcare system has been developing day by day not only in Vietnam but also around the world with the demand of health mentoring to diagnose diseases before getting worse. According to the research of the World Health Organization, approximately 1.5 billions people have a serious medical condition significantly relevant with heart, blood and other diseases. For high blood pressure, heart disease and diabetes, the daily recording health status is necessary to analyse and get the result during the treatment process. This project has used mobile applications because this is one of the most popular platforms. For high blood pressure, heart disease and diabetes patients this app will be useful to support updating their medical profile and connecting with doctors in emergency cases immediately. </p>
+            <br>
+                <h3><u><b>Description:</b></u></h3>
+            <br>
+            <p>In general, the health for life application is divided into three main features including collecting and analyzing user medical records, communicating with advisors tailored to each disease, finding and calling hotline numbers with the nearest local hospital in an emergency case.</p>
+            <br>
+                <div class="w3-justify w3-container">
+                <h5><i>Manage medical profile feature:</i></h5>
+                <p>In the first step, the patient needs to register for a user account, including an email or username and a private password to log in to the Health for Life application. Next, the patient must create a medical record by providing necessary information such as body mass index, heart rate, blood pressure, and other indicators related to the condition. After completing the steps of providing information, the system will automatically analyze and record through the index that the patient provides daily with specialized heart rate measuring devices for patients with heart and blood and pressure for patients with hypertension. "Health for Life" will analyze the increase and decrease of the medical condition indicators based on the medical aspect and give results after every week. This result will help patients assess the effectiveness of treatment as well as warn when the system detects a sudden increase in indicators and requests patients have first-aid at the closest medical center punctually.
+</p>
+                <br>
+                    <h5><i>Online counseling and health examination system:</i></h5>
+                <p>"Health for Life" also provides users with a digital health examination system. This feature allows users to connect with cardiologists from different hospitals to examine online, monitor health status and give advice based on the patient's previous medical records. This system receives contributions from a team of prestigious volunteer doctors who are ready to assist patients. Users can actively choose the time of medical examination through flexible schedules. After choosing their own time, patients will continue to choose a doctor with full information and finally wait for confirmation from the doctor. After scheduling, physicians will prepare the records that patients already have in the process of recording the daily indicators. Finally, doctors and patients will be communicated remotely from time to time, in which customers have chosen Video Call or messaging via third-party such as Zoom, Microsoft Team. This brings convenience, restrictions on movement and quickness in the era of technology 4.0 and especially safety in the current complicated situation of Covid-19.</p>
+                <br>
+                <h5><i>Emergency situations services:</i></h5>
+                <p>When facing the danger of the mortal, every minute becomes more important so the emergency task at the right time is the key of life. “Health of Life” always has a highlight button for emergency function. When the user clicks this button the system activates the emergency mode. Victims will be located via GPS and query the nearest hospital to their current location. The system will automatically provide the hotline number and switch to voice call mode without any action on the phone. While waiting for the ambulance, the application will provide a temporary emergency procedure to assist regain patient stability step by step. After the victim has approached the paramedic, "Health for Life" will act as a profile with full personal information as well as medical history, blood type, allergy of drugs (if any) and medical diary for the latest period of time.</p>
+
+                </div>
+            <br>
+                <h3><u><b>Tools and technologies:</b></u></h3>
+            <br>
+            <p>According to the process of the “Health for Life” project, we need some computing tools to build an app orderly. One of the convenient software development kits for Java smartphone applications is Xcode for IOS and Android Studio for Android system. Adobe graphics toolkit includes adobe photoshop, adobe illustrator will handle to design the main colorful interface of the application. Because of the running application on IOS and Android platforms, we decided to choose framework 7 that is the free open source with full feature to develop mobile apps with original IOS and Android interfare. During work, Github will be the place to push all programming data and share it with team members. </p>
+            <br>
+            <h3><u><b>Skills Required:</b></u></h3>
+            <br>
+            <p>In this project, the requirements are general knowledge about Java programming language. Critical thinking also helps developers have the logical solution to write a logical app effectively. When developing the mobile application, One of the essential skills is to understand the user interface (UI) and user experience (UX). The (UI),(UX) skills play an important role to design app colors, how the layout is organized, and fonts as well as convey the message of “Health for Life” to the client, the service provider, and the community. Finally, soft skills especially teamwork will bring an ideal and fairly working environment for all of the members in the “Health of Life” project team.</p>
+            <br>
+            <h3><u><b>Outcome:</b></u></h3>
+            <br>
+            <p>If the trial results of this project are successful, the "Health for Life" application will be sent to users via ads on social media. This app will be submitted to Google Play for android as well as the App Store for IOS operating systems. The application will closely control the progression of the disease and provide local health services such as clinics and medical facilities to provide peace of mind as a physician who is always watching for the patient. This will also bring many benefits including getting good results during treatment and reducing the number of patients suffering from sudden death, stroke and some complications when not monitored and in a timely emergency.</p>
+            </div>
+          </div>
+          </div>
+        </div>
   </div>
 </div>
 
+<!-- Third Grid: Reference -->
+<div class="w3-row" id="Reference">
+  <div class="w3-full w3-light-grey w3-container w3-center" style="min-height:1200px">
+    <div class="w3-padding-64">
+      <h1>REFERENCE</h1>
+      <br>
+    </div>
+  </div>
+</div>
 
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
