--- a/Intro IT/ASM1/Assignment 1.html
+++ b/Intro IT/ASM1/Assignment 1.html
@@ -185,10 +185,21 @@ I often tend to care about the thoughts and receive the happiness when serving o
 
 <!-- Third Grid: Reference -->
 <div class="w3-row" id="Reference">
-  <div class="w3-full w3-light-grey w3-container w3-center" style="min-height:1200px">
+  <div class="w3-full w3-light-grey w3-container w3-center" style="min-height:800px">
     <div class="w3-padding-64">
       <h1>REFERENCE</h1>
       <br>
+      <p>WHO (2019). "Hypertension” who.int. https://www.who.int/news-room/fact-sheets/detail/hypertension (accessed July. 20, 2020).</p>
+      <br>
+      <p>W3SCHOOL (unknown). "HTML tutorial” w3school.com. https://www.w3schools.com/html/default.asp (accessed July. 20, 2020)</p>
+      <BR>
+      <p>Artsoft consult (unknown). "Tools and technologies” artsoft-consult.ro. https://www.artsoft-consult.ro/areas-of-application/tools-and-technologies (accessed July. 20, 2020)</p>
+      <br>
+      <p>Truity (unknown). "The ESTP Personality Type” truity.com.https://www.truity.com/personality-type/ESTP (accessed July. 20, 2020)</p>
+      <br>
+      <p>Indeed Career Guide (2020). "What is Auditory Learning Style? Definition and Strategies” indeed.com. https://www.indeed.com/career-advice/career-development/auditory-learning-style (accessed July. 20, 2020)</p>
+      <br>
+      <p>Kevin Toth (2017). "Top 5 Skills Required for a Mobile Application Developer” linkedin.com. https://www.linkedin.com/pulse/top-5-skills-required-mobile-application-developer-kevin-toth (accessed July. 2, 2020)</p>
     </div>
   </div>
 </div>
