--- a/Intro IT/Assignment 1.html
+++ b/Intro IT/Assignment 1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="ASSIGNMENT 1">
-<title>Assignment 1</title>
+<html lang="HAI DANG PROFILE">
+<title>HAI DANG PROFILE</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" HREF="ASM1.css">
@@ -34,7 +34,7 @@
           <p><strong>Email Address:</strong> <i>dangtran862000@gmail.com</i></p>
           <p><strong>Nationality:</strong> VIETNAM</p>
           <p><strong>Spoken languages:</strong> Vietnamese, English</p>
-      <div class="w3-padding-50 w3-center">
+          <div class="w3-padding-50 w3-center">
         <br>
         <h4><u>FACT ABOUT ME</u></h4>
           <div class="w3-padding-50 w3-justify">
@@ -167,11 +167,11 @@ I often tend to care about the thoughts and receive the happiness when serving o
             <br>
                 <h3><u><b>Tools and technologies:</b></u></h3>
             <br>
-            <p>According to the process of the “Health for Life” project, we need some computing tools to build an app orderly. One of the convenient software development kits for Java smartphone applications is Xcode for IOS and Android Studio for Android system. Adobe graphics toolkit includes adobe photoshop, adobe illustrator will handle to design the main colorful interface of the application. Because of the running application on IOS and Android platforms, we decided to choose framework 7 that is the free open source with full feature to develop mobile apps with original IOS and Android interfare. During work, Github will be the place to push all programming data and share it with team members. </p>
+            <p>According to the process of the “Health for Life” project, we need some computing tools to build an app orderly. One of the convenient software development kits for Java smartphone applications is Xcode for IOS and Android Studio for Android system. Adobe graphics toolkit includes adobe photoshop, adobe illustrator will handle to design the main colorful interface of the application. Because of the running application on IOS and Android platforms, we decided to choose framework 7 that is the free open source with full feature to develop mobile apps with original IOS and Android interfare. For database management, MySQL will be a good open-source choice that we need to sort the client profiles. During work, Github will be the place to push all programming data and share it with team members. </p>
             <br>
             <h3><u><b>Skills Required:</b></u></h3>
             <br>
-            <p>In this project, the requirements are general knowledge about Java programming language. Critical thinking also helps developers have the logical solution to write a logical app effectively. When developing the mobile application, One of the essential skills is to understand the user interface (UI) and user experience (UX). The (UI),(UX) skills play an important role to design app colors, how the layout is organized, and fonts as well as convey the message of “Health for Life” to the client, the service provider, and the community. Finally, soft skills especially teamwork will bring an ideal and fairly working environment for all of the members in the “Health of Life” project team.</p>
+            <p>In this project, the requirements are general knowledge about Java programming language. Critical thinking also helps developers have the logical solution to write a logical app effectively. When developing the mobile application, One of the essential skills is to understand the user interface (UI) and user experience (UX). The (UI),(UX) skills play an important role to design app colors, how the layout is organized, and fonts as well as convey the message of “Health for Life” to the client, the service provider, and the community. Along with that, MySQL programming skill is a reasonable choice to manage user databases. Finally, soft skills especially teamwork will bring an ideal and fairly working environment for all of the members in the “Health of Life” project team.</p>
             <br>
             <h3><u><b>Outcome:</b></u></h3>
             <br>
